--- a/tasks/get_packages.yml
+++ b/tasks/get_packages.yml
@@ -11,5 +11,6 @@
     cacheable: yes
     pacman_packages: "{{ packages | select('package_divide', 'pacman', package_managers) | map(attribute='pacman') | list }}"
     aur_packages: "{{ packages | select('package_divide', 'aur', package_managers) | map(attribute='aur') | list }}"
-    homebrew_packages: "{{ packages | select('package_divide', 'homebrew', package_managers) | map(attribute='homebrew') | list }}"
+    brew_packages: "{{ packages | select('package_divide', 'brew', package_managers) | map(attribute='brew') | list }}"
+    brew_cask_packages: "{{ packages | select('package_divide', 'brew-cask', package_managers) | map(attribute='brew-cask') | list }}"
     cargo_packages: "{{ packages | select('package_divide', 'cargo', package_managers) | map(attribute='cargo') | list }}"
