--- a/list_packages.yml
+++ b/list_packages.yml
@@ -35,8 +35,13 @@
 
     - name: Homebrew packages to install
       debug:
-        var: homebrew_packages
-      when: "'homebrew' in package_managers"
+        var: brew_packages
+      when: "'brew' in package_managers"
+
+    - name: Homebrew cask packages to install
+      debug:
+        var: brew_cask_packages
+      when: "'brew-cask' in package_managers"
 
     - name: Cargo packages to install
       debug:
