--- a/main.yml
+++ b/main.yml
@@ -51,6 +51,16 @@
         state: present
       when: "'brew-cask' in package_managers"
 
+    - name: Install Oh My Zsh
+      shell: >
+        ls -a ~ | grep -q '.oh-my-zsh'
+        && printf HOLDED
+        || (sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+        && mv ~/.zshrc.pre-oh-my-zsh ~/.zshrc)
+      register: oh_my_zsh_install_hold
+      changed_when: oh_my_zsh_install_hold.stdout != 'HOLDED'
+      when: "'oh-my-zsh' in package_managers"
+
     - name: Install Cargo packages
       shell: >
         cargo install --list | grep -q {{ item }}
